fixes premium stars on stuck header

--- a/components/path/stylesheets/path.styl
+++ b/components/path/stylesheets/path.styl
@@ -52,6 +52,9 @@
 
   .path__breadcrumb
     min-width initial
+    
+    .premium-badge
+      line-height 31px
 
   .edit-channel, .edit-profile, .channel-settings
     display none
